--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -23,3 +23,24 @@
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
 }
+.gallery {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 24px;
+  list-style: none;
+  padding: 24px;
+  margin: 0;
+}
+.gallery-item {
+  flex: 1 1 calc(33.333% - 24px);
+  box-sizing: border-box;
+}
+.gallery-link {
+  display: block;
+  width: 100%;
+  height: 100%;
+}
+.gallery-image {
+  width: 100%;
+  height: 100%;
+}
